--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
         "psr-4": {
             "App\\Ebcms\\Server\\": "src/library/"
         }
+    },
+    "extra": {
+        "title": "系统升级"
     }
 }
